--- a/helloworld/css/main.css
+++ b/helloworld/css/main.css
@@ -10,3 +10,10 @@ p{
 
 #mappy2 { height: 1000px;
     width: 1000px;}
+
+
+#mappy1_lab3 {height : 500px;
+    width: 700px;}
+
+#mappy2_lab3 {height : 500px;
+    width: 500px;}
